--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </head>
 <body>
-  <div class="jumbotron>
+  <div class="jumbotron">
     <ul><h1>Economy</h1>
     <br>
     <h3>Chapter 7</h3>
