--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   <link href="//fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <style>
+    body {
+      background-color: #bf8c40;
+    }
+  </style>
 </head>
 <body>
   <div class="jumbotron">
