--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <style>
     body {
-      background-color: 	#eee2e2;
+      background-color: 	#e8e8e8;
     }
   </style>
 </head>
