--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
     body {
       background-color: 	#e8e8e8;
     }
+    div.info {
+      background-color: #f4dddd;
+      border-top-right-radius: 5px;
+      border-bottom-left-radius: 5px;
+      transition: border-top-right-radius 0.5s;
+      -webkit-transistion: border-top-right-radius 0.5s;
+    }
   </style>
 </head>
 <body>
@@ -25,6 +32,10 @@
    </div>
    
    <div class="col-md-8">
+     <div class="info">
+       <h5>test test test hello world!</h5>
+     </div>
+     </div>
    </div>
    
    <div class="col-md-2">
